--- a/src/components/exchange_rate_calculation/ExchangeRateCalculation.css
+++ b/src/components/exchange_rate_calculation/ExchangeRateCalculation.css
@@ -54,3 +54,19 @@ p{
 .currency_value_display{
     font-size: 40px;
 }
+
+.currency_convert_button{
+    font-size: 25px;
+    padding: 10px 15px;
+    border: 1px solid black;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.currency_convert_button:hover{
+    background-color: white;
+    color: black;
+    border-color: gray;
+}
