Added styles on button for loading

--- a/src/components/exchange_rate_calculation/ExchangeRateCalculation.css
+++ b/src/components/exchange_rate_calculation/ExchangeRateCalculation.css
@@ -70,3 +70,9 @@ p{
     color: black;
     border-color: gray;
 }
+
+.disabled_button{
+    background-color: #bebebe;
+    color: #7a7a7a;
+    border-color: white;
+}
